# multi-tenancy-demo

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  sql_app.db  tenants.py
backups/alembic/: env.py
backups/alembic/versions/: 1a4364089624_.py
database/migrations/: tenant.py
database/migrations/alembic/: env.py  script.py.mako
database/migrations/alembic/versions/: e99a6005782e_.py
database/migrations/shared/: env.py
database/migrations/shared/versions/: 6335078cd5ae_.py
database/migrations/tenant/: env.py  script.py.mako
database/migrations/tenant/versions/: 63fb8892afa6_.py
docs/: migrations.md  poetry-documentation.txt
project/: database.py
tests/: admin.py  models.py  routers.py  schemas.py
utils/: base.py  models.py  schemas.py
